--- a/app/src/main/res/layout/activity_add_purchase.xml
+++ b/app/src/main/res/layout/activity_add_purchase.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/txt_Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Name" />
+        android:hint="Name"
+        android:inputType="text" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,14 +21,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Cost" />
+            android:hint="Cost"
+            android:inputType="number" />
 
         <EditText
             android:id="@+id/txt_Date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Date" />
+            android:hint="Date"
+            android:inputType="date" />
     </LinearLayout>
 
     <LinearLayout
@@ -39,34 +42,37 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Type" />
+            android:hint="Type"
+            android:inputType="text" />
 
         <RadioButton
             android:id="@+id/radio_luxury"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Luxury?"
-            android:onClick="onRadioLuxuryClicked"/>
+            android:onClick="onRadioLuxuryClicked"
+            android:text="Luxury?" />
     </LinearLayout>
 
     <EditText
         android:id="@+id/txt_Place"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Place"/>
+        android:hint="Place"
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/txt_Comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Comment"/>
+        android:hint="Comment"
+        android:inputType="text" />
 
     <Button
         android:id="@+id/btn_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Finish"
-        android:onClick="onFinishClicked"/>
+        android:onClick="onFinishClicked"
+        android:text="Finish" />
 
 </LinearLayout>
