--- a/app/src/main/res/layout/activity_add_purchase.xml
+++ b/app/src/main/res/layout/activity_add_purchase.xml
@@ -9,7 +9,7 @@
         android:id="@+id/txt_Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Name"
+        android:hint="@string/field_name"
         android:inputType="text" />
 
     <LinearLayout
@@ -21,7 +21,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Cost"
+            android:hint="@string/field_cost"
             android:inputType="number" />
 
         <EditText
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Date"
+            android:hint="@string/field_date"
             android:inputType="date" />
     </LinearLayout>
 
@@ -42,7 +42,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Type"
+            android:hint="@string/field_type"
             android:inputType="text" />
 
         <RadioButton
@@ -51,21 +51,21 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="onRadioLuxuryClicked"
-            android:text="Luxury?" />
+            android:text="@string/field_luxury" />
     </LinearLayout>
 
     <EditText
         android:id="@+id/txt_Place"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Place"
+        android:hint="@string/field_place"
         android:inputType="text" />
 
     <EditText
         android:id="@+id/txt_Comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Comment"
+        android:hint="@string/field_comment"
         android:inputType="text" />
 
     <Button
@@ -73,6 +73,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onFinishClicked"
-        android:text="Finish" />
+        android:text="@string/action_finish" />
 
 </LinearLayout>
