--- a/app/src/main/res/layout/activity_view_purchases.xml
+++ b/app/src/main/res/layout/activity_view_purchases.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jamesatkin.monies.ViewPurchasesActivity">
+    tools:context="com.example.jamesatkin.monies.activities.ViewPurchasesActivity">
 
     <ListView
         android:id="@+id/list_purchases"
