--- a/app/src/main/res/layout/activity_add_purchase.xml
+++ b/app/src/main/res/layout/activity_add_purchase.xml
@@ -39,13 +39,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/txt_Type"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/field_type"
-            android:inputType="text" />
+        <!--<EditText-->
+            <!--android:id="@+id/txt_Type"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:hint="@string/field_type"-->
+            <!--android:inputType="text" />-->
+
+        <Spinner
+            android:id="@+id/spinner_Type"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
 
         <RadioButton
             android:id="@+id/radio_luxury"
