Made the radio button visible on the AddTypeActivity

--- a/app/src/main/res/layout/activity_add_type.xml
+++ b/app/src/main/res/layout/activity_add_type.xml
@@ -14,9 +14,8 @@
 
     <RadioButton
         android:id="@+id/radio_luxury"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:onClick="onRadioLuxuryClicked"
         android:text="@string/field_luxury" />
 
