--- a/app/src/main/res/layout/activity_add_type.xml
+++ b/app/src/main/res/layout/activity_add_type.xml
@@ -10,20 +10,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/field_name"
-        android:inputType="text" />
+        android:inputType="text"
+        android:layout_margin="8dp"/>
 
     <RadioButton
         android:id="@+id/radio_luxury"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onRadioLuxuryClicked"
-        android:text="@string/field_luxury" />
+        android:text="@string/field_luxury"
+        android:layout_margin="8dp"/>
 
     <Button
         android:id="@+id/btn_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onFinishClicked"
-        android:text="@string/action_finish" />
+        android:text="@string/action_finish"
+        android:layout_margin="8dp"/>
 
 </LinearLayout>
