Removed luxury field from purchase class and made text fields start with capital letter

--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/field_name"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:layout_margin="8dp"/>
 
     <LinearLayout
@@ -35,7 +35,8 @@
             android:editable="false"
             android:hint="@string/field_date"
             android:inputType="date"
-            android:layout_margin="8dp"/>
+            android:layout_margin="8dp"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -55,15 +56,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="8dp"/>
-
-        <RadioButton
-            android:id="@+id/radio_luxury"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="onRadioLuxuryClicked"
-            android:text="@string/field_luxury"
-            android:layout_margin="8dp"/>
     </LinearLayout>
 
     <EditText
@@ -71,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/field_place"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:layout_margin="8dp"/>
 
     <EditText
@@ -79,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/field_comment"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:layout_margin="8dp"/>
 
     <Button
