--- a/app/src/main/res/layout/activity_type.xml
+++ b/app/src/main/res/layout/activity_type.xml
@@ -13,11 +13,11 @@
         android:inputType="textCapSentences"
         android:layout_margin="8dp"/>
 
-    <RadioButton
-        android:id="@+id/radio_luxury"
+    <CheckBox
+        android:id="@+id/checkbox_luxury"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="onRadioLuxuryClicked"
+        android:onClick="onCheckBoxLuxuryClicked"
         android:text="@string/field_luxury"
         android:layout_margin="8dp"/>
 
