--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-
+            android:onClick="onStatisticsClicked"
             android:layout_margin="8dp"
             android:layout_weight="1"
             android:drawableTop="@drawable/ic_timeline_black_24dp"
