--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,6 +18,7 @@
         android:id="@+id/btn_export"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Export"/>
+        android:text="Export"
+        android:onClick="onExportClicked"/>
 
 </LinearLayout>
