--- a/app/src/main/res/layout/activity_trial2.xml
+++ b/app/src/main/res/layout/activity_trial2.xml
@@ -86,6 +86,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.85"
                 android:background="#00ffffff"
+                android:onClick="onStatisticsClicked"
                 android:scaleType="fitCenter"
                 android:src="@drawable/vector_statistics" />
 
