--- a/app/src/main/res/layout/activity_trial2.xml
+++ b/app/src/main/res/layout/activity_trial2.xml
@@ -26,7 +26,7 @@
                 android:background="#00ffffff"
                 android:onClick="onAddPurchaseClicked"
                 android:scaleType="fitCenter"
-                android:src="@drawable/vector_add_purchase" />
+                android:src="@drawable/icon_add_purchase" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -53,7 +53,7 @@
                 android:background="#00ffffff"
                 android:onClick="onViewPurchasesClicked"
                 android:scaleType="fitCenter"
-                android:src="@drawable/vector_view_purchases" />
+                android:src="@drawable/icon_view_purchases" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -88,7 +88,7 @@
                 android:background="#00ffffff"
                 android:onClick="onStatisticsClicked"
                 android:scaleType="fitCenter"
-                android:src="@drawable/vector_statistics" />
+                android:src="@drawable/icon_statistics" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -115,7 +115,7 @@
                 android:background="#00ffffff"
                 android:onClick="onSettingsClicked"
                 android:scaleType="fitCenter"
-                android:src="@drawable/vector_settings" />
+                android:src="@drawable/icon_settings" />
 
             <TextView
                 android:layout_width="match_parent"
